<?xml version="1.0" encoding="UTF-8"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <artifactId>air</artifactId>
        <groupId>mofokom</groupId>
        <version>1.0-SNAPSHOT</version>
    </parent>
    <groupId>mofokom</groupId>
    <artifactId>ucip-ra</artifactId>
    <version>1.0-SNAPSHOT</version>
    <name>ucip-ra</name>
    <url>http://www.mofokom.biz/site/air</url>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.5</source>
                    <target>1.5</target>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <forkMode>never</forkMode>
                    <argLine>-Djava.net.preferIPv4Stack=true -Djava.security.manager -Djava.security.policy=file:///home/wozza/.java.policy -Djava.util.logging.config.file=${project.build.outputDirectory}/logging.properties</argLine>
                    <useSystemClassLoader>false</useSystemClassLoader>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <executions>
                    <execution>
                        <id>default-jar</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                        <phase>package</phase>
                        <configuration>
                            <!--
                            <classifier>ra</classifier>
                            -->
                            <attach>true</attach>
                            <archive>
                                <manifestSections>
                                    <manifestSection>
                                        <name>mofokom/ra/b/</name>
                                        <manifestEntries>
                                            <Sealed>true</Sealed>
                                        </manifestEntries>
                                    </manifestSection>
                                </manifestSections>
                            </archive>
                        </configuration>
                    </execution>
                </executions>
                <configuration>
                    <archive>
                        <addMavenDescriptor>false</addMavenDescriptor>
                    </archive>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.8.1</version>
            <scope>test</scope>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>common-library</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>ucip-ratype</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>javax.slee</groupId>
            <artifactId>jainslee-api</artifactId>
            <version>1.1</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>ucip-event</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>common-library-impl</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>mofokom</groupId>
            <artifactId>slee-test-framework</artifactId>
            <version>1.0-SNAPSHOT</version>
            <scope>test</scope>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-all</artifactId>
            <version>1.8.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>mofokom</groupId>
            <artifactId>ra-common</artifactId>
            <version>1.0-SNAPSHOT</version>
            <type>jar</type>
        </dependency>
    </dependencies>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
</project>






